fix overflow height

--- a/client/core/src/shared/containers/tiles/tile-manager/tile-manager.component.scss
+++ b/client/core/src/shared/containers/tiles/tile-manager/tile-manager.component.scss
@@ -1,5 +1,5 @@
 tb-tilemanager {
-    flex: 1 1 auto;
+    flex: 1;
     display: flex;
     max-width: 100%;
 }
